2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_titlepage, cm_titlepage_cmds): moved to ...
	* makeinfo/insertion.c: here.

	* makeinfo/cmds.h (titlepage_cmd_present): moved to ...
	* makeinfo/makeinfo.h: here.

	* makeinfo/insertion.c (is_in_insertion_of_type): new function to
	query insertion_stack to see if we are inside a given insertion type.

	* makeinfo/makeinfo.h:
	* makeinfo/insertion.c (begin_insertion, end_insertion):
	* makeinfo/xml.c (xml_add_char):
	* makeinfo/xml.h: removed xml_in_copying and inside_titlepage_cmd
	global variables in favor of the new query function.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (discard_until, execute_string): reworded
	multiline related error messages.
	(discard_until): rollback input_text_offset only if not dealing with a
	multiline error, otherwise the same block gets in the way repeatedly.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.h:
	* makeinfo/xml.c (xml_get_assoc_for_id, xml_associate_title_with_id):
	new functions.
	(xml_insert_indexentry): call execute_string(xref) instead of creating
	references directly.

	* makeinfo/makeinfo.c (cm_xref): check to see if xref is being made to
	an @unnumbered, and only one argument is given.  issue a warning, use
	@unnumbered's title as the third argument.

	* makeinfo/sectioning.c (sectioning_underscore): keep track of
	unnumbered sections, and their node names.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (sectioning_underscore): for Docbook, always
	provide label attribute for chapter and unnumbered.
	(handle_enum_increment): simplified enumeration constraints, and
	changed to follow TeX way.  Moved marker handling to ...
	(cm_chapter, cm_unnumbered, cm_appendix): here.
	(cm_appendix): restart numbering.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.h:
	* makeinfo/insertion.c: new rawdocbook and rawxml insertion types to